--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
             "default": "./dist/index.js"
         },
         "import": {
-            "types": "./dist/index.d.mts",
+            "types": "./dist/index.d.ts",
             "default": "./dist/index.mjs"
         }
     },
