ci(Circle): set the FORCE_COLOR env variable to enforce colors supported

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           override-ci-command: npm install
       - run:
           name: Run tests
-          command: npm test --passWithNoTests
+          command: FORCE_COLOR=3 npm test --passWithNoTests
   build-node:
     # Build node project
     executor: node/default
