--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "@kabeep/palette",
     "description": "The fastest Node.js library to set terminal text colours & styles with hex, rgb and tree-shaking.",
     "version": "1.0.0",
-    "main": "./dist/index.cjs",
+    "main": "./dist/index.js",
     "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
     "exports": {
