--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@kabeep/palette",
-    "description": "The fastest Node.js library to set terminal text colours & styles with hex, rgb and tree-shaking.",
+    "description": "A Node.js library for terminal text colour & style in FP.",
     "version": "1.0.1",
     "main": "./dist/index.js",
     "module": "./dist/index.mjs",
