--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
             "default": "./dist/index.mjs"
         }
     },
-    "files": ["dist"],
+    "files": [
+        "dist"
+    ],
     "scripts": {
         "prepare": "husky install",
         "lint": "biome check src --write",
@@ -46,8 +48,8 @@
         "@types/cli-color": "^2.0.6",
         "@types/kuler": "^2.0.2",
         "@types/node": "^22.10.1",
-        "@vitest/coverage-istanbul": "^3.0.2",
-        "@vitest/ui": "^3.0.2",
+        "@vitest/coverage-istanbul": "^3.2.4",
+        "@vitest/ui": "^3.2.4",
         "ansi-colors": "^4.1.3",
         "chalk": "^5.4.1",
         "chalk-pipe": "^6.2.0",
@@ -73,7 +75,7 @@
         "typedoc-plugin-replace-text": "^4.0.0",
         "typedoc-plugin-version-header": "^1.0.0",
         "typescript": "~5.6.3",
-        "vitest": "^3.0.2",
+        "vitest": "^3.2.4",
         "yoctocolors": "^2.1.1"
     },
     "keywords": [
