chore: migrate biome to v2

--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
         "defaultBranch": "master"
     },
     "files": {
-        "ignore": ["dist"],
+        "includes": ["**", "!**/dist"],
         "ignoreUnknown": false
     },
     "formatter": {
@@ -17,9 +17,7 @@
         "lineWidth": 80,
         "lineEnding": "lf"
     },
-    "organizeImports": {
-        "enabled": true
-    },
+    "assist": { "actions": { "source": { "organizeImports": "on" } } },
     "linter": {
         "enabled": true,
         "rules": {
