--- a/package.json
+++ b/package.json
@@ -65,10 +65,9 @@
         "size-limit-preset-node-lib": "^0.3.0",
         "ts-node": "^10.9.2",
         "tsup": "^8.3.5",
-        "typedoc": "~0.26.11",
+        "typedoc": "^0.26.11",
         "typedoc-material-theme": "^1.2.0",
         "typedoc-plugin-include-example": "^2.0.2",
-        "typedoc-plugin-inline-sources": "^1.1.0",
         "typedoc-plugin-mdn-links": "^4.0.9",
         "typedoc-plugin-missing-exports": "^3.1.0",
         "typedoc-plugin-rename-documents": "^1.0.0",
